Fixed vertical alignment on signin page

--- a/treehacks 2/react-login-demo/frontend/src/login.css
+++ b/treehacks 2/react-login-demo/frontend/src/login.css
@@ -34,16 +34,6 @@ code {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
   Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
-}
-h1 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  justify-content: center;
-    font-size: 64px;
-  color:#64ca79;
-  margin-top: 20px; /* Add margin top to center vertically */
 }  
 input {
   display: flex;
@@ -63,6 +53,7 @@ button {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
   margin: 20px auto;
+  margin-top: 50px;
 }
 
 .loginheader {
@@ -73,7 +64,7 @@ button {
   font-size: 45px;
   color: #64ca79;
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 35px;
   justify-content: center;
 }
 
@@ -87,4 +78,12 @@ button {
   width: 100%;
   background-color: #177229;
   height: 75px;
+}
+
+.verticalbox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
 }
